@@ -1,3 +1,9 @@
+2013-07-04 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCbitv.h,
+	  src/SDCCbitv.c:
+	  Improve const use in bit vectors.
+
 2013-07-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCClospre.hpp:
